--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
 
         
       # run tests!
-      - run: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      #- run: docker login -u $DOCKER_USER -p $DOCKER_PASS
       - run: mvn -Pdocker-build -s .circleci/settings.xml -DskipTests deploy
 
       - save_cache:
