--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,7 @@ jobs:
         
       # run tests!
       #- run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-      - run: mvn -Pdocker-build -s .circleci/settings.xml compile
-
+      - run: mvn -Pdocker-build -s .circleci/settings.xml build -DskipTests
       - save_cache:
           paths:
             - ~/.m2
